implement VAT calculation in a program. modify convertToDto methods in ReportService.java InvoiceService.java amd ContractService.java